src/item-path-parser.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */

"use strict";

function peg$subclass(child, parent) {
  function ctor() { this.constructor = child; }
  ctor.prototype = parent.prototype;
  child.prototype = new ctor();
}

function peg$SyntaxError(message, expected, found, location) {
  this.message  = message;
  this.expected = expected;
  this.found    = found;
  this.location = location;
  this.name     = "SyntaxError";

  if (typeof Error.captureStackTrace === "function") {
    Error.captureStackTrace(this, peg$SyntaxError);
  }
}

peg$subclass(peg$SyntaxError, Error);

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
        literal: function(expectation) {
          return "\"" + literalEscape(expectation.text) + "\"";
        },

        "class": function(expectation) {
          var escapedParts = "",
              i;

          for (i = 0; i < expectation.parts.length; i++) {
            escapedParts += expectation.parts[i] instanceof Array
              ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
              : classEscape(expectation.parts[i]);
          }

          return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
        },

        any: function(expectation) {
          return "any character";
        },

        end: function(expectation) {
          return "end of input";
        },

        other: function(expectation) {
          return expectation.description;
        }
      };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/"/g,  '\\"')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, '\\\\')
      .replace(/\]/g, '\\]')
      .replace(/\^/g, '\\^')
      .replace(/-/g,  '\\-')
      .replace(/\0/g, '\\0')
      .replace(/\t/g, '\\t')
      .replace(/\n/g, '\\n')
      .replace(/\r/g, '\\r')
      .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = new Array(expected.length),
        i, j;

    for (i = 0; i < expected.length; i++) {
      descriptions[i] = describeExpectation(expected[i]);
    }

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== void 0 ? options : {};

  var peg$FAILED = {},

      peg$startRuleFunctions = { ItemPathExpression: peg$parseItemPathExpression, StringValue: peg$parseStringValue },
      peg$startRuleFunction  = peg$parseItemPathExpression,

      peg$c0 = function(paths) {
          paths.keywords = keywords;
          return paths;
        },
      peg$c1 = function(left, right) { return combine(left, right, 'union') },
      peg$c2 = "union",
      peg$c3 = peg$literalExpectation("union", false),
      peg$c4 = function(union) {
          keyword('keyword.set');
          return union;
        },
      peg$c5 = function(left, right) { return combine(left, right, 'except') },
      peg$c6 = "except",
      peg$c7 = peg$literalExpectation("except", false),
      peg$c8 = function(except) {
          keyword('keyword.set');
          return except;
        },
      peg$c9 = function(left, right) { return combine(left, right, 'intersect') },
      peg$c10 = "intersect",
      peg$c11 = peg$literalExpectation("intersect", false),
      peg$c12 = function(intersect) {
          keyword('keyword.set');
          return intersect;
        },
      peg$c13 = "[",
      peg$c14 = peg$literalExpectation("[", false),
      peg$c15 = "]",
      peg$c16 = peg$literalExpectation("]", false),
      peg$c17 = function(start, end) {
          return {
            start: start === null ? 0 : start,
            end: end
          }
        },
      peg$c18 = ":",
      peg$c19 = peg$literalExpectation(":", false),
      peg$c20 = function(integer) {
          if (integer !== null) {
            return integer;
          }
          return Number.MAX_VALUE;
        },
      peg$c21 = "-",
      peg$c22 = peg$literalExpectation("-", false),
      peg$c23 = /^[0-9]/,
      peg$c24 = peg$classExpectation([["0", "9"]], false, false),
      peg$c25 = function(sign, number) {
          if (sign) {
            return -parseInt(number.join(''), 10);
          } else {
            return parseInt(number.join(''), 10);
          }
        },
      peg$c26 = "(",
      peg$c27 = peg$literalExpectation("(", false),
      peg$c28 = ")",
      peg$c29 = peg$literalExpectation(")", false),
      peg$c30 = function(expression, slice) {
          expression.slice = slice;
          return expression;
        },
      peg$c31 = "/",
      peg$c32 = peg$literalExpectation("/", false),
      peg$c33 = function(absolute, step, trailingSteps) {
          absolute = !! absolute;

          if (absolute) {
            keyword('entity.other.axis', '/');
          } else if (step.defaultAxis) {
            // Default to descendent axis for first step in non absolute paths.
            step.axis = 'descendant';
          }

          var steps = [step];
          if (trailingSteps) {
             steps = steps.concat(trailingSteps);
          }
          return {
            absolute : absolute,
            steps : steps
          }
        },
      peg$c34 = function(axis, type, predicate, slice) {
          return type || predicate;
        },
      peg$c35 = function(axis, type, predicate, slice) {
          var defaultAxis = false
          if (!axis) {
            defaultAxis = true
            axis = 'child';
          }

          if (!type) {
            type = '*';
          }

          if (!predicate) {
            predicate = '*'
          }

          return {
            defaultAxis: defaultAxis,
            axis: axis,
            type: type,
            predicate: predicate,
            slice: slice
          }
        },
      peg$c36 = "ancestor-or-self::",
      peg$c37 = peg$literalExpectation("ancestor-or-self::", false),
      peg$c38 = "ancestor::",
      peg$c39 = peg$literalExpectation("ancestor::", false),
      peg$c40 = "child::",
      peg$c41 = peg$literalExpectation("child::", false),
      peg$c42 = "descendant-or-self::",
      peg$c43 = peg$literalExpectation("descendant-or-self::", false),
      peg$c44 = "descendant::",
      peg$c45 = peg$literalExpectation("descendant::", false),
      peg$c46 = "following-sibling::",
      peg$c47 = peg$literalExpectation("following-sibling::", false),
      peg$c48 = "following::",
      peg$c49 = peg$literalExpectation("following::", false),
      peg$c50 = "preceding-sibling::",
      peg$c51 = peg$literalExpectation("preceding-sibling::", false),
      peg$c52 = "preceding::",
      peg$c53 = peg$literalExpectation("preceding::", false),
      peg$c54 = "parent::",
      peg$c55 = peg$literalExpectation("parent::", false),
      peg$c56 = "self::",
      peg$c57 = peg$literalExpectation("self::", false),
      peg$c58 = "//",
      peg$c59 = peg$literalExpectation("//", false),
      peg$c60 = "..",
      peg$c61 = peg$literalExpectation("..", false),
      peg$c62 = ".",
      peg$c63 = peg$literalExpectation(".", false),
      peg$c64 = function(axis) {
            keyword('entity.other.axis');

            switch(axis) {
            case '//':
              return 'descendant-or-self';
            case '/':
              return 'descendant';
            case '..':
              return 'parent';
            case '.':
              return 'child';
            default:
              return axis.substr(0, axis.length - 2);
            }
          },
      peg$c65 = function(name) {
          var types = options.types;
          return types && types[name];
        },
      peg$c66 = function(name) {
          keyword('entity.other.axis');
          return name;
        },
      peg$c67 = function(step) {
          keyword('entity.other.axis', '/');
          return step;
        },
      peg$c68 = function(left, right) { return combine(left, right, 'or') },
      peg$c69 = "or",
      peg$c70 = peg$literalExpectation("or", false),
      peg$c71 = function(or) {
          keyword('keyword.boolean');
          return or;
        },
      peg$c72 = function(left, right) { return combine(left, right, 'and') },
      peg$c73 = "and",
      peg$c74 = peg$literalExpectation("and", false),
      peg$c75 = function(and) {
          keyword('keyword.boolean');
          return and;
        },
      peg$c76 = function(not, expression) {
          if (not && (not.length % 2)) {
            return {
              not : expression
            };
          } else {
            return expression;
          }
        },
      peg$c77 = "not",
      peg$c78 = peg$literalExpectation("not", false),
      peg$c79 = function(not) {
          keyword('keyword.boolean');
          return not;
        },
      peg$c80 = function(expression) { return expression; },
      peg$c81 = "*",
      peg$c82 = peg$literalExpectation("*", false),
      peg$c83 = function(leftValue, relation, modifier, rightValue) {
          return leftValue != null || rightValue != null;
        },
      peg$c84 = function(leftValue, relation, modifier, rightValue) {
          if (!relation && !rightValue) {
            if (leftValue[0] == 'getAttribute') {
              return {
                leftValue : leftValue,
                relation : null,
                modifier : 'i',
                rightValue : null
              };
            } else {
              return {
                leftValue : ['getAttribute', 'text'],
                relation : relation || 'contains',
                modifier : modifier || 'i',
                rightValue : leftValue
              }
            }
          }
          return {
            leftValue : leftValue || ['getAttribute', 'text'],
            relation : relation || 'contains',
            modifier : modifier || 'i',
            rightValue : rightValue
          }
        },
      peg$c85 = "@",
      peg$c86 = peg$literalExpectation("@", false),
      peg$c87 = function(name, trailingSegments) {
          var getAttributeFunction = ['getAttribute', name];
          if (trailingSegments) {
            getAttributeFunction = getAttributeFunction.concat(trailingSegments);
          }
          keyword('entity.other.attribute-name');

          return getAttributeFunction;
        },
      peg$c88 = function(functionName, itemPathExpression) {
          return [functionName, itemPathExpression];
        },
      peg$c89 = function(name) {
          return name;
        },
      peg$c90 = function(chars) {
          return chars.join('');
        },
      peg$c91 = function(char) { return char; },
      peg$c92 = "count",
      peg$c93 = peg$literalExpectation("count", false),
      peg$c94 = function(name) {
          keyword('entity.other.function-name');
          return name;
        },
      peg$c95 = "beginswith",
      peg$c96 = peg$literalExpectation("beginswith", false),
      peg$c97 = "contains",
      peg$c98 = peg$literalExpectation("contains", false),
      peg$c99 = "endswith",
      peg$c100 = peg$literalExpectation("endswith", false),
      peg$c101 = "like",
      peg$c102 = peg$literalExpectation("like", false),
      peg$c103 = "matches",
      peg$c104 = peg$literalExpectation("matches", false),
      peg$c105 = "=",
      peg$c106 = peg$literalExpectation("=", false),
      peg$c107 = "!=",
      peg$c108 = peg$literalExpectation("!=", false),
      peg$c109 = "<=",
      peg$c110 = peg$literalExpectation("<=", false),
      peg$c111 = ">=",
      peg$c112 = peg$literalExpectation(">=", false),
      peg$c113 = "<",
      peg$c114 = peg$literalExpectation("<", false),
      peg$c115 = ">",
      peg$c116 = peg$literalExpectation(">", false),
      peg$c117 = function(relation) {
          keyword('keyword.operator.relation');
          return relation;
        },
      peg$c118 = "s",
      peg$c119 = peg$literalExpectation("s", false),
      peg$c120 = "i",
      peg$c121 = peg$literalExpectation("i", false),
      peg$c122 = "n",
      peg$c123 = peg$literalExpectation("n", false),
      peg$c124 = "d",
      peg$c125 = peg$literalExpectation("d", false),
      peg$c126 = function(modifier) {
          keyword('keyword.operator.modifier');
          return modifier;
        },
      peg$c127 = function(strings) {
          var results = [];
          for (var i = 0; i < strings.length; i++) {
            results.push(strings[i].join(''));
          }
          return results.join('').trim();
        },
      peg$c128 = peg$otherExpectation("string"),
      peg$c129 = "\"\"",
      peg$c130 = peg$literalExpectation("\"\"", false),
      peg$c131 = function() { return ""; },
      peg$c132 = "\"",
      peg$c133 = peg$literalExpectation("\"", false),
      peg$c134 = function(chars) {
          keyword('string.quoted');
          return chars;
        },
      peg$c135 = function(chars) { return chars.join(""); },
      peg$c136 = /^[^"\\\0-\x1F\x7F]/,
      peg$c137 = peg$classExpectation(["\"", "\\", ["\0", "\x1F"], "\x7F"], true, false),
      peg$c138 = "\\\"",
      peg$c139 = peg$literalExpectation("\\\"", false),
      peg$c140 = function() { return '"';  },
      peg$c141 = "\\\\",
      peg$c142 = peg$literalExpectation("\\\\", false),
      peg$c143 = function() { return "\\"; },
      peg$c144 = "\\/",
      peg$c145 = peg$literalExpectation("\\/", false),
      peg$c146 = function() { return "/";  },
      peg$c147 = "\\b",
      peg$c148 = peg$literalExpectation("\\b", false),
      peg$c149 = function() { return "\b"; },
      peg$c150 = "\\f",
      peg$c151 = peg$literalExpectation("\\f", false),
      peg$c152 = function() { return "\f"; },
      peg$c153 = "\\n",
      peg$c154 = peg$literalExpectation("\\n", false),
      peg$c155 = function() { return "\n"; },
      peg$c156 = "\\r",
      peg$c157 = peg$literalExpectation("\\r", false),
      peg$c158 = function() { return "\r"; },
      peg$c159 = "\\t",
      peg$c160 = peg$literalExpectation("\\t", false),
      peg$c161 = function() { return "\t"; },
      peg$c162 = /^[~`!#$%\^&*-+={}|\\;',.?\-]/,
      peg$c163 = peg$classExpectation(["~", "`", "!", "#", "$", "%", "^", "&", ["*", "+"], "=", "{", "}", "|", "\\", ";", "'", ",", ".", "?", "-"], false, false),
      peg$c164 = function(string) {
          return reservedWords[string];
        },
      peg$c165 = function(string) {
          keyword('string.unquoted');
          return string;
        },
      peg$c166 = /^[A-Z]/,
      peg$c167 = peg$classExpectation([["A", "Z"]], false, false),
      peg$c168 = "_",
      peg$c169 = peg$literalExpectation("_", false),
      peg$c170 = /^[a-z]/,
      peg$c171 = peg$classExpectation([["a", "z"]], false, false),
      peg$c172 = /^[\xC0-\xD6]/,
      peg$c173 = peg$classExpectation([["\xC0", "\xD6"]], false, false),
      peg$c174 = /^[\xD8-\xF6]/,
      peg$c175 = peg$classExpectation([["\xD8", "\xF6"]], false, false),
      peg$c176 = /^[\xF8-\u02FF]/,
      peg$c177 = peg$classExpectation([["\xF8", "\u02FF"]], false, false),
      peg$c178 = /^[\u0370-\u037D]/,
      peg$c179 = peg$classExpectation([["\u0370", "\u037D"]], false, false),
      peg$c180 = /^[\u037F-\u1FFF]/,
      peg$c181 = peg$classExpectation([["\u037F", "\u1FFF"]], false, false),
      peg$c182 = /^[\u200C-\u200D]/,
      peg$c183 = peg$classExpectation([["\u200C", "\u200D"]], false, false),
      peg$c184 = /^[\u2070-\u218F]/,
      peg$c185 = peg$classExpectation([["\u2070", "\u218F"]], false, false),
      peg$c186 = /^[\u2C00-\u2FEF]/,
      peg$c187 = peg$classExpectation([["\u2C00", "\u2FEF"]], false, false),
      peg$c188 = /^[\u3001-\uD7FF]/,
      peg$c189 = peg$classExpectation([["\u3001", "\uD7FF"]], false, false),
      peg$c190 = /^[\uF900-\uFDCF]/,
      peg$c191 = peg$classExpectation([["\uF900", "\uFDCF"]], false, false),
      peg$c192 = /^[\uFDF0-\uFFFD]/,
      peg$c193 = peg$classExpectation([["\uFDF0", "\uFFFD"]], false, false),
      peg$c194 = /^[\xB7]/,
      peg$c195 = peg$classExpectation(["\xB7"], false, false),
      peg$c196 = /^[\u0300-\u036F]/,
      peg$c197 = peg$classExpectation([["\u0300", "\u036F"]], false, false),
      peg$c198 = /^[\u203F-\u2040]/,
      peg$c199 = peg$classExpectation([["\u203F", "\u2040"]], false, false),
      peg$c200 = function(startchar, chars) {
          return startchar + chars.join('');
        },
      peg$c201 = peg$otherExpectation("whitespace"),
      peg$c202 = function(whitespace) { return whitespace.join("") },
      peg$c203 = /^[ \t\n\r]/,
      peg$c204 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

      peg$currPos          = 0,
      peg$savedPos         = 0,
      peg$posDetailsCache  = [{ line: 1, column: 1 }],
      peg$maxFailPos       = 0,
      peg$maxFailExpected  = [],
      peg$silentFails      = 0,

      peg$resultsCache = {},

      peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos], p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line:   details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;
      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos),
        endPosDetails   = peg$computePosDetails(endPos);

    return {
      start: {
        offset: startPos,
        line:   startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line:   endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseItemPathExpression() {
    var s0, s1, s2;

    var key    = peg$currPos * 42 + 0,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseUnionPaths();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c0(s1);
        s0 = s1;
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseUnionPaths() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 42 + 1,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    s1 = peg$parseExceptPaths();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseUnionKeyword();
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s5 = peg$parseUnionPaths();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c1(s1, s5);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseExceptPaths();
    }

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseUnionKeyword() {
    var s0, s1;

    var key    = peg$currPos * 42 + 2,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$c3); }
    }
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$c4(s1);
    }
    s0 = s1;

    peg$resultsCache[key] = { nextPos: peg$currPos, result: s0 };

    return s0;
  }

  function peg$parseExceptPaths() {
    var s0, s1, s2, s3, s4, s5;

    var key    = peg$currPos * 42 + 3,
        cached = peg$resultsCache[key];

    if (cached) {
      peg$currPos = cached.nextPos;

      return cached.result;
    }
